--- a/module2solution/index.html
+++ b/module2solution/index.html
@@ -1,9 +1,25 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-	<title>hello</title>
+  <meta charset="utf-8">
+  <title>Assignment solution for module 2</title>
+  <link href="css.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<h1>first</h1>
+  <h1>Our Menu</h1>
+  <section>
+    We can link to a file in the same directory as this HTML file like this:
+    <a href="same-directory.html" title="same dir link">Linking to a file in the same directory</a>
+
+    <a href="same-directory.html" title="same dir link">
+      <div> DIV Linking to a file in the same directory</div>
+    </a>
+  </section>
 </body>
 </html>
+
+
+
+
+
+
