--- a/module2solution/index.html
+++ b/module2solution/index.html
@@ -1,25 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Assignment solution for module 2</title>
-  <link href="css.css" rel="stylesheet" type="text/css">
+
+<title>Assignment solution for Module 2</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="css.css" rel="stylesheet" type="text/css" >
+
 </head>
 <body>
-  <h1>Our Menu</h1>
-  <section>
-    We can link to a file in the same directory as this HTML file like this:
-    <a href="same-directory.html" title="same dir link">Linking to a file in the same directory</a>
+<h1>Our Menu</h1>
 
-    <a href="same-directory.html" title="same dir link">
-      <div> DIV Linking to a file in the same directory</div>
-    </a>
-  </section>
+
+
+  <div class="col-lg-4 col-md-6 col-sm-12">
+    <div class="box">
+      <p class="content-name name1">Chicken</p>
+      <p class="content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6 col-sm-12">
+    <div class="box">
+      <p class="content-name name2">Beef</p>
+      <p class="content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-12 col-sm-12">
+    <div class="box">
+      <p class="content-name name3">Sushi</p>
+      <p class="content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+    </div>  
+  </div>
+
 </body>
 </html>
-
-
-
-
-
 
